tests/ui/fail/complex_self_type.stderr
error: #[extern_trait] too complex `Self` type
 --> tests/ui/fail/complex_self_type.rs:5:21
  |
5 |     fn nested(self: Box<Self>) -> Self;
  |                     ^^^^^^^^^
